
    * **Version Updater:**

      * **Fix:** Fixed check state checking for PySide by using
        QtCore.Qt.CheckState.

  * **Env:**

    * **MayaEnv:**

      * **New:** External files are now moved to the
        version.absolute_path/external_files folder
      * **Fix:** Fixed a bug where the references where reloaded over and over
        again when saving a new version.

    * **NukeEnv:**

      * **Fix:** Fixed a typo
      * **New:** Now also in Nuke, the current version is set as the parent of
        the newly created version.

    * **HoudiniEnv:**

      * **New:** Now also in Nuke, the current version is set as the parent of
        the newly created version.
      * **Fix:** The file is not saved twice to store environment variables.

0.1.0.a4
========

* **Pipeline:**

  * **UI:**

    * **Fix:** Version Creator UI now sets the statuses_comboBox to the status
      of the last version in the previous_version_tableWidget.
    * **New:** Version Creator UI now uses a QSplitter for tasks_groupBox,
      new_version_groupBox and previous_versions_groupBox which allows sizing
      of the columns.
    * **New:** Version Creator UI now shows the dependent task list in a new
      column in tasks_treeWidget.
    * **New:** Version Creator UI can now display task thumbnails through
      Stalker Pyramid server.
    * **Update:** In Version Creator UI, Version notes are now saved in
      **Version.description** attribute instead of creating a new **Note**
      instance.
    * **Utils:**

      * **New:** Added a new class called **UIFile** to manage ui files.
      * **New:** UICompiler now checks the *.ui* files against their stored md5
        checksum values to prevent unnecessary compiles of unchanged files.

  * **Utils:**

    * **New:** utils.open_browser_in_location() now selects the file if a file
      path is given.
    * **New:** Added **StalkerThumbnailCache** class, which can read thumbnails